# aosp-virtual-mic

./: README.md  init.virtualmic.rc
aosp-integration/: README.md  android.hardware.audio.service-aidl.xml  virtualmic_audio_policy_configuration.xml
aosp-integration/a13/: README.md
aosp-integration/sepolicy/: file_contexts.fragment  hal_virtualmic.te  service_contexts.fragment
aosp-integration/virtualmic/: AudioBufferHeader.h  StreamVirtualMic.cpp  VirtualMicSocket.cpp  VirtualMicSource.h
hal/: Android.bp  AudioBufferHeader.h  ModuleVirtualMic.cpp  README.md  VirtualMicModule.cpp  VirtualMicModule.h  VirtualMicSocket.h  VirtualMicSource.cpp  VirtualMicSource.h  VirtualMicStream.cpp  VirtualMicStream.h
hal/aidl-v2/: Android.bp  ModuleVirtualMic.cpp  StreamVirtualMic.cpp  android.hardware.audio.service.virtualmic.rc  android.hardware.audio.service.virtualmic.xml  service.cpp
hal/core/: Android.bp  AudioBufferHeader.h  VirtualMicSocket.cpp  VirtualMicSocket.h  VirtualMicSource.cpp  VirtualMicSource.h
hal/hidl-v7/: Android.bp  DeviceVirtualMic.cpp  DeviceVirtualMic.h  DevicesFactoryVirtualMic.cpp  DevicesFactoryVirtualMic.h  (+5 more)
renderer-lib/: VirtualMicClient.cpp  VirtualMicClient.h
renderer-test/: virtual_mic_renderer.cpp
scripts/: integrate.sh
sepolicy/: hal_virtualmic.te
test-renderer/: Android.bp  README.md  virtual_mic_renderer.cpp  virtualmic-renderer.rc
unified-test/: .gitignore  README.md  gradle.properties  settings.gradle.kts
unified-test/app/src/main/cpp/: CMakeLists.txt  audio_generator.cpp  virtual_mic_writer.cpp  virtual_mic_writer.h
(+20 files in other folders)
